--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@
                     [`In this hand, the shotgun represents more than power; it's a commitment to the people under my protection,`,`With every pull of the trigger, I've defended my community from chaos. Critics call it violence; I call it sacrifice.`],
                     [`As you parade around, shotgun in hand, what's the endgame? To become a martyr for your so-called community?" you probe, challenging the narrative he's crafted around himself. "Martyr? No. Guardian. Protector. And when threats loom at our doorstep,`,`I say, 'Say hello to my little friend'.`],
                     [`You claim to be the shield against chaos, but it's a thin line between protector and oppressor," you argue, the tension between you palpable. "Ah, but in times of peace, the protector rests.." he cocks his shotgun, the sound echoing ominously, "In times of war,`,`Always ready to defend what's ours.`],
-                    [`This cycle of violence... when does it end?" you demand, seeking a crack in his facade. He smirks. "It ends when the threats do. Until then," he chambers a round, his resolve clear, "Okay,`,`I'm reloaded.`]
+                    [`This cycle of violence... when does it end?" you demand, seeking a crack in his facade. He smirks. "It ends when the threats do." he chambers a round, his resolve clear, "Okay,`,`I'm reloaded.`]
                     ], expression: _.template(`flicking a cigar in your direction`), keywords: ["guns"], gunmen: "gangsters" },
 
                 { name: "Golden Dragons", expansion: "riseofthekingdom", boss: "Ah Long", bosstitle: _.template("unrelenting martial arts master"), gender: "male", desc: "the enterprise of martial artists, thugs and businessmen", addressing: "weasels", minions: _.template("ruthless triads and yakuza"), threat: "lifts his hand, dark, malevolent energy flaring on his fist", minionnames: ["Jin", "Dao", "Wan Bo"], preparedboss: [["Merciless Clutch", "and put it into play"]], gloat: [
@@ -1276,7 +1276,7 @@
                     gunmen: "armed gangers", loot: "the drugs and the money",
                     gloat: [
                         [`You think fighting me in some landfill is going to stop the downfall of Ransom?`, `I'm not your problem. I'm just doing business.`], 
-                        [`Just like your plans, drugs lead nowhere but down. We're here to clean up the mess, starting with you." you tell it like it is. "Hah! You think you're the cure? I am the high that this world craves,`, `But you're about to hit rock bottom.`]
+                        [`Just like your plans, drugs lead nowhere but down. We're here to clean up the mess, starting with you." you tell it like it is. "Hah! You think you're the cure? I am the high that this world craves,`, `But you're about to hit rock bottom.`],
                         [`This ends now. Your poison won't find its way to the streets anymore," you make your statement. "Ha! You think you can stop the tide?`,`I'm just a drop in the ocean, Gladiators.`],
                         [`Dealing death in the shadows, you've just hit a wall. A Citadel wall," you state matter-of-factly. "Bold words for someone standing alone in the dark,`,`Let's see if you're as tough as you talk.`],
                         [`This lot's about to be cleared, and I'm not talking about the rubble," you say and follow up with a smile. "You think you're the hero here?`,`I'm just a supplier; it's demand you should be fighting.`],
